--- a/grid-responsive.html
+++ b/grid-responsive.html
@@ -44,8 +44,8 @@
             </div>
             <div class="card-footer d-flex justify-content-between flex-wrap">
               <a href="#" class="btn btn-primary">Buy Now</a>
-              <div class="price d-flex align-items-center">
-                <span class="full-price fs-4 text-decoration-line-through"
+              <div class="d-flex align-items-center">
+                <span class="fs-4 text-decoration-line-through"
                   >$ 15.99</span
                 >
                 <span class="discount fs-2 text-success">$ 9.99</span>
@@ -68,33 +68,8 @@
             </div>
             <div class="card-footer d-flex justify-content-between flex-wrap">
               <a href="#" class="btn btn-primary">Buy Now</a>
-              <div class="price d-flex align-items-center">
-                <span class="full-price fs-4 text-decoration-line-through"
-                  >$ 15.99</span
-                >
-                <span class="discount fs-2 text-success">$ 9.99</span>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-xl-5 col-lg-3 col-md-4 col-sm-12 mb-3">
-          <div class="card">
-            <img
-              src="https://bit.ly/2SiZpPj"
-              class="card-img-top p-3"
-              alt="Product"
-            />
-            <div class="card-body">
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-            </div>
-            <div class="card-footer d-flex justify-content-between flex-wrap">
-              <a href="#" class="btn btn-primary">Buy Now</a>
-              <div class="price d-flex align-items-center">
-                <span class="full-price fs-4 text-decoration-line-through"
+              <div class="d-flex align-items-center">
+                <span class="fs-4 text-decoration-line-through"
                   >$ 15.99</span
                 >
                 <span class="discount fs-2 text-success">$ 9.99</span>
@@ -118,11 +93,36 @@
             </div>
             <div class="card-footer d-flex justify-content-between flex-wrap">
               <a href="#" class="btn btn-primary">Buy Now</a>
-              <div class="price d-flex align-items-center">
-                <span class="full-price fs-4 text-decoration-line-through"
+              <div class="d-flex align-items-center">
+                <span class="fs-4 text-decoration-line-through"
                   >$ 15.99</span
                 >
-                <span class="discount fs-2 text-success">$ 9.99</span>
+                <span class="fs-2 text-success">$ 9.99</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-xl-5 col-lg-3 col-md-4 col-sm-12 mb-3">
+          <div class="card">
+            <img
+              src="https://bit.ly/2SiZpPj"
+              class="card-img-top p-3"
+              alt="Product"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+            <div class="card-footer d-flex justify-content-between flex-wrap">
+              <a href="#" class="btn btn-primary">Buy Now</a>
+              <div class="d-flex align-items-center">
+                <span class="fs-4 text-decoration-line-through"
+                  >$ 15.99</span
+                >
+                <span class="fs-2 text-success">$ 9.99</span>
               </div>
             </div>
           </div>
