moving on with blog bootsrap

--- a/blog.html
+++ b/blog.html
@@ -34,16 +34,8 @@
     <div class="banner-image">
       <div class="banner-overlay">
         <div class="container">
-          <div
-            class="
-              row
-              d-flex
-              text-center
-              align-items-center
-              justify-content-center
-            "
-          >
-            <div class="about-content blog-header-content col-lg-12">
+          <div class="row about-content text-center justify-content-center">
+            <div class="blog-header-content col-lg-12">
               <h1 class="text-white">Dude You’re Getting a Telescope</h1>
               <p class="text-white">
                 There is a moment in the life of any aspiring astronomer that it
@@ -140,19 +132,19 @@
                 </ul>
                 <div class="user-details row">
                   <div class="col-12">
-                    <p class="user-nane">
+                    <p class="user-name">
                       <a href="#">Mark wiens</a
                       ><span class="lnr lnr-user"></span>
                     </p>
-                    <p class="user-nane">
+                    <p class="user-name">
                       <a href="#"> 12 Dec, 2017 </a
                       ><span class="lnr lnr-calendar-full"></span>
                     </p>
-                    <p class="user-nane">
+                    <p class="user-name">
                       <a href="#">1.2M Views</a
                       ><span class="lnr lnr-eye"></span>
                     </p>
-                    <p class="user-nane">
+                    <p class="user-name">
                       <a href="#">06 Comments</a
                       ><span class="lnr lnr-bubble"></span>
                     </p>
@@ -178,7 +170,7 @@
                     on boot camp when you can get the MCSE study materials
                     yourself at a fraction.
                   </p>
-                  <a href="#" class="primary-btn">View More</a>
+                  <a href="#" class="btn-user">View More</a>
                 </div>
               </div>
             </div>
@@ -230,7 +222,7 @@
                     on boot camp when you can get the MCSE study materials
                     yourself at a fraction.
                   </p>
-                  <a href="#" class="primary-btn">View More</a>
+                  <a href="#" class="btn-user">View More</a>
                 </div>
               </div>
             </div>
@@ -282,7 +274,7 @@
                     on boot camp when you can get the MCSE study materials
                     yourself at a fraction.
                   </p>
-                  <a href="#" class="primary-btn">View More</a>
+                  <a href="#" class="btn-user">View More</a>
                 </div>
               </div>
             </div>
@@ -334,7 +326,7 @@
                     on boot camp when you can get the MCSE study materials
                     yourself at a fraction.
                   </p>
-                  <a href="#" class="primary-btn">View More</a>
+                  <a href="#" class="btn-user">View More</a>
                 </div>
               </div>
             </div>
@@ -385,7 +377,7 @@
                     on boot camp when you can get the MCSE study materials
                     yourself at a fraction.
                   </p>
-                  <a href="#" class="primary-btn">View More</a>
+                  <a href="#" class="btn-user">View More</a>
                 </div>
               </div>
             </div>
@@ -434,9 +426,9 @@
                 </p>
               </div>
               <div class="sidebar-widget popular-posts">
-                <h4 class="popular-title">Popular Posts</h4>
+                <h4 class="title">Popular Posts</h4>
                 <div class="popular-posts-list">
-                  <div class="popular-post d-flex">
+                  <div class="popular-post d-flex mb-2">
                     <div class="thumb">
                       <img
                         class="img-fluid"
@@ -451,7 +443,7 @@
                       >
                     </div>
                   </div>
-                  <div class="popular-post d-flex">
+                  <div class="popular-post d-flex mb-2">
                     <div class="thumb">
                       <img
                         class="img-fluid"
@@ -461,13 +453,13 @@
                       />
                     </div>
                     <div class="details ms-3">
-                      <a href="#"
+                      <a class="text-decoration-none" href="#"
                         ><h6>The Amazing Hubble</h6>
                         <p>02 Hours ago</p></a
                       >
                     </div>
                   </div>
-                  <div class="popular-post d-flex">
+                  <div class="popular-post d-flex mb-2">
                     <div class="thumb">
                       <img
                         class="img-fluid"
@@ -483,7 +475,7 @@
                       >
                     </div>
                   </div>
-                  <div class="popular-post d-flex">
+                  <div class="popular-post d-flex mb-2">
                     <div class="thumb">
                       <img
                         class="img-fluid"
@@ -501,46 +493,60 @@
                 </div>
               </div>
               <div class="sidebar-widget post-categories">
-                <h4 class="category-title">Post Categories</h4>
-                <ul class="categories-list list-none">
+                <h4 class="title">Post Categories</h4>
+                <ul class="categories-list list-none ps-0">
                   <li>
-                    <a href="#" class="categories-flex"
+                    <a
+                      href="#"
+                      class="categories-flex d-flex justify-content-between"
                       ><p>Technology</p>
                       <p>37</p></a
                     >
                   </li>
                   <li>
-                    <a href="#" class="categories-flex"
+                    <a
+                      href="#"
+                      class="categories-flex d-flex justify-content-between"
                       ><p>Lifestyle</p>
                       <p>24</p></a
                     >
                   </li>
                   <li>
-                    <a href="#" class="categories-flex"
+                    <a
+                      href="#"
+                      class="categories-flex d-flex justify-content-between"
                       ><p>Fashion</p>
                       <p>59</p></a
                     >
                   </li>
                   <li>
-                    <a href="#" class="categories-flex"
+                    <a
+                      href="#"
+                      class="categories-flex d-flex justify-content-between"
                       ><p>Art</p>
                       <p>29</p></a
                     >
                   </li>
                   <li>
-                    <a href="#" class="categories-flex"
+                    <a
+                      href="#"
+                      class="categories-flex d-flex justify-content-between"
                       ><p>Food</p>
                       <p>15</p></a
                     >
                   </li>
                   <li>
-                    <a href="#" class="categories-flex"
+                    <a
+                      href="#"
+                      class="categories-flex d-flex justify-content-between"
                       ><p>Architecture</p>
                       <p>09</p></a
                     >
                   </li>
                   <li>
-                    <a href="#" class="categories-flex"
+                    <a
+                      href="#"
+                      class="categories-flex d-flex justify-content-between"
                       ><p>Adventure</p>
                       <p>44</p></a
                     >
@@ -548,13 +554,13 @@
                 </ul>
               </div>
               <div class="sidebar-widget newsletter">
-                <h4 class="newsletter-title">Newsletter</h4>
+                <h4 class="title">Newsletter</h4>
                 <p>
                   Here, I focus on a range of items and features that we use in
                   life without giving them a second thought.
                 </p>
-                <div class="newsletter-form">
-                  <div class="newsletter-input">
+                <div class="newsletter-form d-flex mb-4">
+                  <div class="newsletter-input d-flex">
                     <div class="newsletter-icon">
                       <i class="fa fa-envelope"></i>
                     </div>
