--- a/grid-responsive.html
+++ b/grid-responsive.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Boostrap Products Grid</title>
-    <link rel="stylesheet" href="assets/css/grid-responsive-style.css" />
+    <title>Bootstrap Products Grid</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -45,9 +44,7 @@
             <div class="card-footer d-flex justify-content-between flex-wrap">
               <a href="#" class="btn btn-primary">Buy Now</a>
               <div class="d-flex align-items-center">
-                <span class="fs-4 text-decoration-line-through"
-                  >$ 15.99</span
-                >
+                <span class="fs-4 text-decoration-line-through">$ 15.99</span>
                 <span class="discount fs-2 text-success">$ 9.99</span>
               </div>
             </div>
@@ -69,9 +66,7 @@
             <div class="card-footer d-flex justify-content-between flex-wrap">
               <a href="#" class="btn btn-primary">Buy Now</a>
               <div class="d-flex align-items-center">
-                <span class="fs-4 text-decoration-line-through"
-                  >$ 15.99</span
-                >
+                <span class="fs-4 text-decoration-line-through">$ 15.99</span>
                 <span class="discount fs-2 text-success">$ 9.99</span>
               </div>
             </div>
@@ -94,9 +89,7 @@
             <div class="card-footer d-flex justify-content-between flex-wrap">
               <a href="#" class="btn btn-primary">Buy Now</a>
               <div class="d-flex align-items-center">
-                <span class="fs-4 text-decoration-line-through"
-                  >$ 15.99</span
-                >
+                <span class="fs-4 text-decoration-line-through">$ 15.99</span>
                 <span class="fs-2 text-success">$ 9.99</span>
               </div>
             </div>
@@ -119,9 +112,7 @@
             <div class="card-footer d-flex justify-content-between flex-wrap">
               <a href="#" class="btn btn-primary">Buy Now</a>
               <div class="d-flex align-items-center">
-                <span class="fs-4 text-decoration-line-through"
-                  >$ 15.99</span
-                >
+                <span class="fs-4 text-decoration-line-through">$ 15.99</span>
                 <span class="fs-2 text-success">$ 9.99</span>
               </div>
             </div>
