--- a/grid-responsive.html
+++ b/grid-responsive.html
@@ -11,8 +11,75 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="assets/css/grid-responsive.css" />
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">BIT </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Dropdown
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link disabled"
+                href="#"
+                tabindex="-1"
+                aria-disabled="true"
+                >Disabled</a
+              >
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-success" type="submit">
+              Search
+            </button>
+          </form>
+        </div>
+      </div>
+    </nav>
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -43,6 +110,26 @@
             </div>
             <div class="card-footer d-flex justify-content-between flex-wrap">
               <a href="#" class="btn btn-primary">Buy Now</a>
+              <div class="btn-group dropstart position-absolute end-0 top-0">
+                <button
+                  class="btn btn-secondary dropdown-toggle m-3"
+                  type="button"
+                  id="dropdownMenuButton1"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  More
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="#">Delete</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Edit</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">View</a>
+                  </li>
+                </ul>
+              </div>
               <div class="d-flex align-items-center">
                 <span class="fs-4 text-decoration-line-through">$ 15.99</span>
                 <span class="discount fs-2 text-success">$ 9.99</span>
@@ -65,6 +152,26 @@
             </div>
             <div class="card-footer d-flex justify-content-between flex-wrap">
               <a href="#" class="btn btn-primary">Buy Now</a>
+              <div class="btn-group dropstart position-absolute end-0 top-0">
+                <button
+                  class="btn btn-secondary dropdown-toggle m-3"
+                  type="button"
+                  id="dropdownMenuButton1"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  More
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="#">Delete</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Edit</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">View</a>
+                  </li>
+                </ul>
+              </div>
               <div class="d-flex align-items-center">
                 <span class="fs-4 text-decoration-line-through">$ 15.99</span>
                 <span class="discount fs-2 text-success">$ 9.99</span>
@@ -88,6 +195,26 @@
             </div>
             <div class="card-footer d-flex justify-content-between flex-wrap">
               <a href="#" class="btn btn-primary">Buy Now</a>
+              <div class="btn-group dropstart position-absolute end-0 top-0">
+                <button
+                  class="btn btn-secondary dropdown-toggle m-3"
+                  type="button"
+                  id="dropdownMenuButton1"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  More
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="#">Delete</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Edit</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">View</a>
+                  </li>
+                </ul>
+              </div>
               <div class="d-flex align-items-center">
                 <span class="fs-4 text-decoration-line-through">$ 15.99</span>
                 <span class="fs-2 text-success">$ 9.99</span>
@@ -111,6 +238,26 @@
             </div>
             <div class="card-footer d-flex justify-content-between flex-wrap">
               <a href="#" class="btn btn-primary">Buy Now</a>
+              <div class="btn-group dropstart position-absolute end-0 top-0">
+                <button
+                  class="btn btn-secondary dropdown-toggle m-3"
+                  type="button"
+                  id="dropdownMenuButton1"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  More
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="#">Delete</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Edit</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">View</a>
+                  </li>
+                </ul>
+              </div>
               <div class="d-flex align-items-center">
                 <span class="fs-4 text-decoration-line-through">$ 15.99</span>
                 <span class="fs-2 text-success">$ 9.99</span>
@@ -120,5 +267,10 @@
         </div>
       </div>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
