--- a/grid-responsive.html
+++ b/grid-responsive.html
@@ -109,7 +109,52 @@
               </p>
             </div>
             <div class="card-footer d-flex justify-content-between flex-wrap">
-              <a href="#" class="btn btn-primary">Buy Now</a>
+              <button
+                type="button"
+                data-bs-toggle="modal"
+                data-bs-target="#exampleModal1"
+                class="btn btn-primary"
+              >
+                Buy Now
+              </button>
+              <div
+                class="modal fade"
+                id="exampleModal1"
+                tabindex="-1"
+                aria-labelledby="exampleModalLabel"
+                aria-hidden="true"
+              >
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-body p-0">
+                      <button
+                        type="button"
+                        class="
+                          btn-close
+                          position-absolute
+                          bg-white
+                          border
+                          top-0
+                          end-0
+                          rounded-circle
+                          p-2
+                        "
+                        data-bs-dismiss="modal"
+                        aria-label="Close"
+                      ></button>
+                      <iframe
+                        width="100%"
+                        height="360"
+                        src="https://www.youtube.com/embed/dIILNk_qOxk"
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen
+                      ></iframe>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <div class="btn-group dropstart position-absolute end-0 top-0">
                 <button
                   class="btn btn-secondary dropdown-toggle m-3"
@@ -151,7 +196,52 @@
               </p>
             </div>
             <div class="card-footer d-flex justify-content-between flex-wrap">
-              <a href="#" class="btn btn-primary">Buy Now</a>
+              <button
+                type="button"
+                data-bs-toggle="modal"
+                data-bs-target="#exampleModal1"
+                class="btn btn-primary"
+              >
+                Buy Now
+              </button>
+              <div
+                class="modal fade"
+                id="exampleModal1"
+                tabindex="-1"
+                aria-labelledby="exampleModalLabel"
+                aria-hidden="true"
+              >
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-body p-0">
+                      <button
+                        type="button"
+                        class="
+                          btn-close
+                          position-absolute
+                          bg-white
+                          border
+                          top-0
+                          end-0
+                          rounded-circle
+                          p-2
+                        "
+                        data-bs-dismiss="modal"
+                        aria-label="Close"
+                      ></button>
+                      <iframe
+                        width="100%"
+                        height="360"
+                        src="https://www.youtube.com/embed/dIILNk_qOxk"
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen
+                      ></iframe>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <div class="btn-group dropstart position-absolute end-0 top-0">
                 <button
                   class="btn btn-secondary dropdown-toggle m-3"
@@ -194,7 +284,52 @@
               </p>
             </div>
             <div class="card-footer d-flex justify-content-between flex-wrap">
-              <a href="#" class="btn btn-primary">Buy Now</a>
+              <button
+                type="button"
+                data-bs-toggle="modal"
+                data-bs-target="#exampleModal1"
+                class="btn btn-primary"
+              >
+                Buy Now
+              </button>
+              <div
+                class="modal fade"
+                id="exampleModal1"
+                tabindex="-1"
+                aria-labelledby="exampleModalLabel"
+                aria-hidden="true"
+              >
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-body p-0">
+                      <button
+                        type="button"
+                        class="
+                          btn-close
+                          position-absolute
+                          bg-white
+                          border
+                          top-0
+                          end-0
+                          rounded-circle
+                          p-2
+                        "
+                        data-bs-dismiss="modal"
+                        aria-label="Close"
+                      ></button>
+                      <iframe
+                        width="100%"
+                        height="360"
+                        src="https://www.youtube.com/embed/dIILNk_qOxk"
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen
+                      ></iframe>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <div class="btn-group dropstart position-absolute end-0 top-0">
                 <button
                   class="btn btn-secondary dropdown-toggle m-3"
@@ -237,7 +372,52 @@
               </p>
             </div>
             <div class="card-footer d-flex justify-content-between flex-wrap">
-              <a href="#" class="btn btn-primary">Buy Now</a>
+              <button
+                type="button"
+                data-bs-toggle="modal"
+                data-bs-target="#exampleModal1"
+                class="btn btn-primary"
+              >
+                Buy Now
+              </button>
+              <div
+                class="modal fade"
+                id="exampleModal1"
+                tabindex="-1"
+                aria-labelledby="exampleModalLabel"
+                aria-hidden="true"
+              >
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-body p-0">
+                      <button
+                        type="button"
+                        class="
+                          btn-close
+                          position-absolute
+                          bg-white
+                          border
+                          top-0
+                          end-0
+                          rounded-circle
+                          p-2
+                        "
+                        data-bs-dismiss="modal"
+                        aria-label="Close"
+                      ></button>
+                      <iframe
+                        width="100%"
+                        height="360"
+                        src="https://www.youtube.com/embed/dIILNk_qOxk"
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen
+                      ></iframe>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <div class="btn-group dropstart position-absolute end-0 top-0">
                 <button
                   class="btn btn-secondary dropdown-toggle m-3"
