--- a/navbar.html
+++ b/navbar.html
@@ -38,7 +38,7 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Pricing</a>
             </li>
-            <li class="nav-item d-none d-md-block d-lg-none">
+            <li class="nav-item d-sm-block d-md-block d-lg-none">
               <a
                 class="nav-link"
                 href="#"
@@ -68,7 +68,9 @@
                     </div>
                     <div class="modal-body">
                       <div class="form-group pb-2">
-                        <label class="pb-2" for="email">Email address</label>
+                        <label class="pb-2 fw-bold" for="email"
+                          >Email address</label
+                        >
                         <input
                           type="email"
                           class="form-control"
@@ -78,7 +80,9 @@
                         />
                       </div>
                       <div class="form-group">
-                        <label class="pb-2" for="password">Password</label>
+                        <label class="pb-2 fw-bold" for="password"
+                          >Password</label
+                        >
                         <input
                           type="password"
                           class="form-control"
@@ -103,7 +107,7 @@
                 </div>
               </div>
             </li>
-            <li class="nav-item d-none d-md-block d-lg-none">
+            <li class="nav-item d-sm-block d-md-block d-lg-none">
               <a
                 class="nav-link"
                 href="#"
@@ -143,7 +147,9 @@
                         />
                       </div>
                       <div class="form-group text-center">
-                        <label class="text-center pb-2 pt-2" for="email2"
+                        <label
+                          class="text-center fw-bold pb-2 pt-2"
+                          for="email2"
                           >Email address</label
                         >
                         <input
@@ -155,7 +161,7 @@
                         />
                       </div>
                       <div class="form-group text-center">
-                        <label class="pb-2 pt-2" for="password2"
+                        <label class="fw-bold pb-2 pt-2" for="password2"
                           >Password</label
                         >
                         <input
@@ -166,7 +172,7 @@
                         />
                       </div>
                       <div class="form-group text-center">
-                        <label class="pb-2 pt-2" for="confirm-password"
+                        <label class="fw-bold pb-2 pt-2" for="confirm-password"
                           >Confirm password</label
                         >
                         <input
@@ -177,7 +183,9 @@
                         />
                       </div>
                       <div class="form-group text-center">
-                        <label class="pb-2 pt-2" for="country">Country</label>
+                        <label class="fw-bold pb-2 pt-2" for="country"
+                          >Country</label
+                        >
                         <input
                           id="country"
                           type="text"
@@ -187,7 +195,7 @@
                         />
                       </div>
                       <div class="form-group text-center pb-2">
-                        <label class="pb-2 pt-2" for="age">Age</label>
+                        <label class="fw-bold pb-2 pt-2" for="age">Age</label>
                         <input
                           id="age"
                           type="text"
@@ -206,7 +214,7 @@
                             required
                           />
                           <label class="form-check-label" for="invalidCheck">
-                            Agree to terms and conditions
+                            Agree to <a href="#">terms and conditions</a>
                           </label>
                           <div class="invalid-feedback">
                             You must agree before submitting.
@@ -233,7 +241,7 @@
           </ul>
         </div>
 
-        <div class="login-register">
+        <div class="login-register d-none d-lg-block">
           <button
             type="button"
             class="btn btn-sm btn-warning"
@@ -264,7 +272,9 @@
                 </div>
                 <div class="modal-body">
                   <div class="form-group">
-                    <label class="pb-2" for="email3">Email address</label>
+                    <label class="fw-bold pb-2" for="email3"
+                      >Email address</label
+                    >
                     <input
                       type="email"
                       class="form-control"
@@ -274,7 +284,9 @@
                     />
                   </div>
                   <div class="form-group">
-                    <label class="pb-2 pt-2" for="password3">Password</label>
+                    <label class="fw-bold pb-2 pt-2" for="password3"
+                      >Password</label
+                    >
                     <input
                       type="password"
                       class="form-control"
@@ -336,7 +348,7 @@
                     />
                   </div>
                   <div class="form-group text-center">
-                    <label class="text-center pb-2 pt-2" for="email4"
+                    <label class="fw-bold text-center pb-2 pt-2" for="email4"
                       >Email address</label
                     >
                     <input
@@ -348,7 +360,9 @@
                     />
                   </div>
                   <div class="form-group text-center">
-                    <label class="pb-2 pt-2" for="password4">Password</label>
+                    <label class="fw-bold pb-2 pt-2" for="password4"
+                      >Password</label
+                    >
                     <input
                       type="password"
                       class="form-control"
@@ -357,7 +371,7 @@
                     />
                   </div>
                   <div class="form-group text-center">
-                    <label class="pb-2 pt-2" for="confirm-password2"
+                    <label class="fw-bold pb-2 pt-2" for="confirm-password2"
                       >Confirm password</label
                     >
                     <input
@@ -368,7 +382,9 @@
                     />
                   </div>
                   <div class="form-group text-center">
-                    <label class="pb-2 pt-2" for="country2">Country</label>
+                    <label class="fw-bold pb-2 pt-2" for="country2"
+                      >Country</label
+                    >
                     <input
                       id="country2"
                       type="text"
@@ -378,7 +394,7 @@
                     />
                   </div>
                   <div class="form-group text-center pb-2">
-                    <label class="pb-2 pt-2" for="age2">Age</label>
+                    <label class="fw-bold pb-2 pt-2" for="age2">Age</label>
                     <input
                       id="age2"
                       type="text"
@@ -397,7 +413,7 @@
                         required
                       />
                       <label class="form-check-label" for="invalidCheck">
-                        Agree to terms and conditions
+                        Agree to <a href="#">terms and conditions</a>
                       </label>
                       <div class="invalid-feedback">
                         You must agree before submitting.
